--- a/IRCTC/src/main/resources/application.properties
+++ b/IRCTC/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.redis.host=localhost
 spring.redis.port=6379
 #spring.redis.password=mypass
 spring.redis.timeout=60000
+
+#advance booking window
+advance.booking.window.days=5
