--- a/IRCTC/src/main/resources/application.properties
+++ b/IRCTC/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/irctc
 spring.datasource.username=root
 spring.datasource.password=mysqlrootpassword
+hibernate.show.sql=true;
 #Redis properties
 caching.enabled=true
 #spring.redis.database=0
@@ -10,8 +11,6 @@ spring.redis.host=localhost
 spring.redis.port=6379
 #spring.redis.password=mypass
 spring.redis.timeout=60000
-
 #advance booking window
 advance.booking.window.days=5
-
 machine.name=server1
